# rs-ucan

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  codecov.yaml  deny.toml  flake.nix  package.json  pnpm-lock.yaml  pre-commit.nix  release-please-config.json  tsconfig.json
.cargo/: config
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  bench.yml  cargo-audit.yml  coverage.yaml  coverage.yml  dictionary.txt  nix_build.yml  quality.yml  release.yaml  release.yml  run_test_suite.yaml  spellcheck.yml  test-all-features.yml  test-host.yml  tests_and_checks.yml
benches/: a_benchmark.rs
design/: README.md  delegation.md  did.md  envelope.md  invocation.md  no_std.md  policy.md  varsig.md
examples/: counterparts.rs
proptest-regressions/delegation/: payload.txt
proptest-regressions/delegation/policy/: selector.txt
proptest-regressions/invocation/: payload.txt
scripts/: run_browser_tests.sh
src/: ability.rs  agent.rs  builder.rs  capability.rs  capsule.rs  chain.rs  condition.rs  crypto.rs  delegate.rs  delegation.rs  did.rs  did_verifier.rs  error.rs  invocation.rs  invoke.rs  ipld.rs  lib.rs  metadata.rs  new_wasm.rs  nonce.rs  number.rs  plugins.rs  promise.rs  proof.rs  prove.rs  reader.rs  receipt.rs  respond.rs  signature.rs  store.rs  task.rs  test_utils.rs  time.rs  token.rs  types.rs  ucan.rs  url.rs  wasm.rs  workerd.js
src/ability/: :63  any.rs  arguments.rs  command.rs  crud.rs  dynamic.rs  js.rs  msg.rs  parse.rs  pipe.rs  preset.rs  traits.rs  ucan.rs  wasm.rs
src/capability/: iterator.rs  mod.rs  semantics.rs
src/crypto/: bls.rs  bls12381.rs  did.rs  domain_separator.rs  eddsa.rs  es256.rs  es256k.rs  es384.rs  es512.rs  mod.rs  nonce.rs  p521.rs  ps256.rs  rs256.rs  rs512.rs  rsa.rs  signature.rs  varsig.rs
src/delegate/: payload.rs
src/delegation/: :50  agent.rs  condition.rs  delegable.rs  delegatable.rs  delegate.rs  error.rs  payload.rs  policy.rs  store.rs  traits.rs
src/did/: key.rs  newtype.rs  preset.rs  traits.rs  verifiable.rs
src/did_verifier/: did_key.rs
src/invocation/: agent.rs  payload.rs  promise.rs  resolvable.rs  store.rs
src/ipld/: cid.rs  collection.rs  enriched.rs  error.rs  newtype.rs  number.rs  promised.rs
src/metadata/: keyed.rs
src/plugins/: ucan.rs  wnfs.rs
src/proof/: checkable.rs  error.rs  internal.rs  parentful.rs  parentless.rs  parents.rs  prove.rs  same.rs  util.rs
src/prove/: internal.rs  parentful.rs  parentless.rs  traits.rs
src/reader/: builder.rs  generic.rs  promised.rs
src/receipt/: payload.rs  receipt.rs  responds.rs  runnable.rs  store.rs
src/respond/: payload.rs  responds.rs
src/semantics/: ability.rs  caveat.rs  fact.rs  mod.rs  resource.rs
src/signature/: envelope.rs  witness.rs
src/task/: id.rs
src/test_utils/: rvg.rs
src/tests/: attenuation.rs  builder.rs  chain.rs  crypto.rs  mod.rs  ucan.rs
src/time/: error.rs  js.rs  timestamp.rs
tests/: conformance.rs  integration_test.rs  rs_ucan.test.js
ucan/: CHANGELOG.md  Cargo.toml  README.md
ucan-key-support/: CHANGELOG.md  Cargo.toml  README.md  webdriver.json
ucan-key-support/.cargo/: config
ucan-key-support/demo/: build.sh  index.html
ucan-key-support/scripts/: run_browser_tests.sh
ucan-key-support/src/: ed25519.rs  lib.rs  p256.rs  rsa.rs  web_crypto.rs
ucan-key-support/src/fixtures/: mod.rs  web.rs
ucan-wasm/: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json  vitest.config.ts
ucan-wasm/src/: lib.rs
ucan-wasm/src/loaders/: export-workerd-wasm.js
ucan-wasm/src/ucan/: cid.rs  mod.rs  token.rs  verify.rs
ucan-wasm/tests/: browser.test.ts  node.test.ts  verify.ts  web.rs
ucan-wasm/tests/browser/: verify.test.ts
ucan-wasm/tests/fixtures/: cid.json  index.ts  invalid.json  valid.json
ucan-wasm/tests/node/: verify.test.ts
ucan-wasm/tests/ucan/: cid.test.ts  token.test.ts  verify.test.ts
ucan/proptest-regressions/delegation/policy/: selector.txt
ucan/proptest-regressions/delegation/policy/selector/: filter.txt  select.txt
ucan/src/: builder.rs  chain.rs  cid.rs  collection.rs  collections.rs  command.rs  crypto.rs  delegation.rs  did.rs  envelope.rs  future.rs  invocation.rs  ipld.rs  lib.rs  number.rs  promise.rs  receipt.rs  sealed.rs  serde.rs  store.rs  task.rs  time.rs  ucan.rs  unset.rs
ucan/src/capability/: caveats.rs  data.rs  iterator.rs  proof.rs  semantics.rs
ucan/src/crypto/: did.rs  key.rs  mod.rs  nonce.rs  signature.rs  signed.rs
ucan/src/delegation/: builder.rs  policy.rs  store.rs  subject.rs
ucan/src/delegation/policy/: predicate.rs  selector.rs
ucan/src/delegation/policy/selector/: error.rs  filter.rs  select.rs  selectable.rs
ucan/src/envelope/: payload_tag.rs
ucan/src/invocation/: builder.rs
ucan/src/ipld/: capability.rs  mod.rs  principle.rs  signature.rs  ucan.rs
ucan/src/tests/: attenuation.rs  builder.rs  chain.rs  crypto.rs  helpers.rs  mod.rs  ucan.rs
ucan/src/tests/fixtures/: crypto.rs  identities.rs
ucan/src/tests/fixtures/capabilities/: email.rs  wnfs.rs
ucan/src/time/: error.rs  timestamp.rs
ucan/tests/: delegation_conformance.rs  policy_conformance.rs
ucan_core/: Cargo.toml
ucan_core/src/: cid.rs  command.rs  delegation.rs  did.rs  envelope.rs  invocation.rs  lib.rs
ucan_core/src/crypto/: nonce.rs
ucan_core/src/delegation/: builder.rs  store.rs  subject.rs
ucan_core/src/delegation/policy/: predicate.rs
ucan_core/src/delegation/policy/selector/: select.rs
ucan_core/src/envelope/: payload_tag.rs
ucan_core/src/invocation/: builder.rs
ucan_core/tests/: delegation_conformance.rs  policy_conformance.rs
ucan_wasm/: Cargo.toml  package.json
ucan_wasm/e2e/: delegation.spec.ts
ucan_wasm/e2e/server/: index.html
ucan_wasm/src/: lib.rs
varsig/: Cargo.toml
varsig/src/: codec.rs  encoding.rs  hash.rs  header.rs  lib.rs  signature.rs  signer.rs  verify.rs
varsig/src/signature/: ecdsa.rs  eddsa.rs  web_crypto.rs
(+96 files in other folders)
