[workspace]
resolver = "2"
members = [
    "ucan",
    "ucan_wasm",
    "varsig"
]

[workspace.package]
authors = [
    "Brooklyn Zelenka <hello@brooklynzelenka.com>",
    "Irakli Gozalishvili <contact@gozala.io>",
    "Christopher Joel <0xcda7a@gmail.com>"
]

edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ucan-wg/rs-ucan"
rust-version = "1.85.0"

[workspace.dependencies]
arbitrary = { version = "1.4", features = ["derive"] }
async-signature = "0.5.1"
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
env_logger = "0.11.8"
futures = "0.3.31"
getrandom = "0.2.9"
ipld-core = { version = "0.4.2", features = ["arb", "serde"] }
nom = "8.0"
nom-unicode = "0.4"
nonempty = { version = "0.10.0", features = ["serialize"] }
pretty_assertions = "1.4"
proptest = "1.6"
proptest-arbitrary-interop = "0.1.0"
rand = "0.9.1"
rsa = { version = "0.9.8", features = ["sha2"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_ipld_dagcbor = "0.6.3"
serde_ipld_dagjson = "0.2.0"
signature = "2.2"
test-log = "0.2.17"
testresult = "0.4.1"
thiserror = "1.0"
tracing = "0.1.41"

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
let_underscore = { level = "warn", priority = -1 }
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
nonstandard_style = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }

rust_2018_idioms = { level = "deny", priority = -1 }
unreachable_pub = "deny"
unused_extern_crates = "deny"

unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "warn"
expect_used = "warn"
fallible_impl_from = "warn"
fn_params_excessive_bools = "warn"
indexing_slicing = "warn"
missing_const_for_fn = "warn"
must_use_candidate = "warn"
panic = "warn"
todo = "warn"
unneeded_field_pattern = "warn"
unwrap_used = "warn"
wildcard_enum_match_arm = "warn"

all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
