[workspace]
resolver = "2"
members = [
    "ucan",
    "ucan_wasm",
    "varsig"
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ucan-wg/rs-ucan"
rust-version = "1.90.0"

[workspace.dependencies]
arbitrary = { version = "1.4", features = ["derive"] }
async-signature = { version = "0.5.1", default-features = false }
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
env_logger = "0.11.8"
future_form = "0.3.1"
futures = "0.3.31"
getrandom = "0.4.2"
ipld-core = { version = "0.4.2", default-features = false, features = ["arb", "serde"] }
leb128fmt = "0.1.0"
nom = { version = "8.0", default-features = false }
nom-unicode = "0.4"
nonempty = { version = "0.12.0", default-features = false, features = ["serialize"] }
pretty_assertions = "1.4"
proptest = "1.6"
proptest-arbitrary-interop = "0.1.0"
rand = "0.9.1"
serde = { version = "1.0", default-features = false, features = ["derive", "rc"] }
serde_ipld_dagcbor = { version = "0.6.3", default-features = false }
serde_ipld_dagjson = "0.2.0"
signature = { version = "2.2", default-features = false }
test-log = "0.2.17"
testresult = "0.4.1"
thiserror = { version = "2.0", default-features = false }
tracing = { version = "0.1.41", default-features = false }

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
let_underscore = { level = "warn", priority = -1 }
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
nonstandard_style = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }

rust_2018_idioms = { level = "deny", priority = -1 }
unreachable_pub = "deny"
unused_extern_crates = "deny"

unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "warn"
expect_used = "warn"
fallible_impl_from = "warn"
fn_params_excessive_bools = "warn"
indexing_slicing = "warn"
missing_const_for_fn = "warn"
must_use_candidate = "warn"
panic = "warn"
todo = "warn"
unneeded_field_pattern = "warn"
unwrap_used = "warn"
wildcard_enum_match_arm = "warn"

all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
