[package]
name = "ucan-key-support"
description = "Ready to use SigningKey implementations for the ucan crate"
edition = "2021"
keywords = ["ucan", "authz", "jwt", "pki"]
categories = [
  "authorization",
  "cryptography",
  "encoding",
  "web-programming"
]
documentation = "https://docs.rs/ucan"
repository = "https://github.com/cdata/rs-ucan/"
homepage = "https://github.com/cdata/rs-ucan"
license = "Apache-2.0"
readme = "README.md"
version = "0.3.0-alpha.1"

[features]
web = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "web-sys", "ucan/web", "getrandom/js"]

[dependencies]
ucan = {path = "../ucan", version = "0.5.0-alpha.1" }
anyhow = "1.0.52"
async-trait = "0.1.52"
ed25519-zebra = "^3"
rsa = "0.5"
bs58 = "0.4"
log = "0.4"

[build-dependencies]
npm_rs = "0.2.1"

[dev-dependencies]
rand = "0.8"
# NOTE: This is needed so that rand can be included in WASM builds
getrandom = { version = "0.2.5", features = ["js"] }
wasm-bindgen-test = "0.3.29"
pkcs8 = "0.7.5"
tokio = { version = "^1", features = ["macros", "rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.79", optional = true }
wasm-bindgen-futures = { version = "0.4.29", optional = true }
js-sys = { version = "0.3.56", optional = true }

[target.'cfg(target_arch="wasm32")'.dependencies.web-sys]
version = "0.3.56"
optional = true
features = [
  'Window',
  'SubtleCrypto',
  'Crypto',
  'CryptoKey',
  'CryptoKeyPair',
  'DedicatedWorkerGlobalScope'
]

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
pollster = "0.2.5"