[package]
name = "ucan-key-support"
description = "Ready to use SigningKey implementations for the ucan crate"
edition = "2021"
keywords = ["ucan", "authz", "jwt", "pki"]
categories = [
  "authorization",
  "cryptography",
  "encoding",
  "web-programming"
]
documentation = "https://docs.rs/ucan"
repository = "https://github.com/cdata/rs-ucan/"
homepage = "https://github.com/cdata/rs-ucan"
license = "Apache-2.0"
readme = "README.md"
version = "0.1.7"

[features]
default = []

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bs58 = "0.5"
ed25519-zebra = "3.1"
log = "0.4"
rsa = "0.9"
p256 = "0.13"
sha2 = { version = "0.10", features = ["oid"] }
ucan = { path = "../ucan", version = "0.4.0" }

[build-dependencies]
npm_rs = "1.0"

[dev-dependencies]
# NOTE: This is needed so that rand can be included in WASM builds
getrandom = { version = "0.2", features = ["js"] }
rand = "0.9"
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.21", features = ["macros", "rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
js-sys = { version = "0.3" }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  'Window',
  'SubtleCrypto',
  'Crypto',
  'CryptoKey',
  'CryptoKeyPair',
  'DedicatedWorkerGlobalScope'
]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
pollster = "0.3.0"
