[package]
name = "ucan"
readme = "README.md"
keywords = ["auth", "capability", "rpc"]
categories = ["security", "web-programming"]
description = "UCAN certificate capability tokens"
version = "0.5.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arbitrary = { workspace = true, optional = true }
base58 = "0.2.0"
ed25519-dalek = "2.2"
futures = { workspace = true }
getrandom.workspace = true
ipld-core.workspace = true
leb128 = "0.2.5"
nom-unicode.workspace = true
nom.workspace = true
nonempty.workspace = true
proptest = { workspace = true, optional = true }
proptest-arbitrary-interop = { workspace = true, optional = true }
serde-value = "0.7"
serde.workspace = true
serde_bytes = "0.11.19"
serde_ipld_dagcbor.workspace = true
sha2 = "0.10.9"
signature.workspace = true
thiserror.workspace = true
tracing.workspace = true
varsig = { path = "../varsig" }

[dev-dependencies]
arbitrary = { workspace = true, optional = false }
base64 = "0.22.1"
pretty_assertions.workspace = true
proptest = { workspace = true, optional = false }
proptest-arbitrary-interop = "0.1.0"
serde_json = "1.0"
serde_ipld_dagjson.workspace = true
test-log.workspace = true
testresult.workspace = true

[features]
test_utils = ["arb", "property_test"]
arb = ["dep:arbitrary"]
property_test = ["dep:proptest", "dep:proptest-arbitrary-interop"]

[lints]
workspace = true
