[package]
name = "ucan"
description = "Implement UCAN-based authorization with conciseness and ease!"
keywords = ["ucan", "authz", "jwt", "pki"]
categories = [
  "authentication",
  "cryptography",
  "encoding",
  "web-programming"
]
documentation = "https://docs.rs/ucan"
repository = "https://github.com/cdata/rs-ucan/"
homepage = "https://github.com/cdata/rs-ucan"
license = "Apache-2.0"
readme = "README.md"
version = "0.4.0"
edition = "2021"

[features]
default = []

[dependencies]
anyhow = "1.0"
async-recursion = "1.0"
async-trait = "0.1"
base64 = "0.21"
bs58 = "0.5"
cid = "0.10"
futures = "0.3"
instant = { version = "0.1", features = ["wasm-bindgen"] }
libipld-core = { version = "0.16", features = ["serde-codec", "serde"] }
libipld-json = "0.16"
log = "0.4"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.25"
unsigned-varint = "0.7"
url = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# NOTE: This is needed so that rand can be included in WASM builds
getrandom = { version = "~0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "^1", features = ["macros", "test-util"] }

[dev-dependencies]
did-key = "0.2"
serde_ipld_dagcbor = "0.3"
wasm-bindgen-test = "0.3"
