[package]
name = "ucan"
readme = "README.md"
keywords = ["auth", "capability", "rpc"]
categories = ["security", "web-programming"]
description = "UCAN certificate capability tokens"
version = "0.5.0"
authors = [
    "Brooklyn Zelenka <hello@brooklynzelenka.com>",
    "Irakli Gozalishvili <contact@gozala.io>",
    "Christopher Joel <0xcda7a@gmail.com>"
]

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arbitrary = { workspace = true, optional = true }
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
ed25519-dalek = "2.2"
future_form = { workspace = true }
futures = { workspace = true }
getrandom = { workspace = true, optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
ipld-core = { version = "0.4.2", default-features = false, features = ["serde"] }
leb128fmt = { workspace = true }
nom = { workspace = true, default-features = false, features = ["alloc"] }
nom-unicode = { workspace = true }
nonempty = { workspace = true, default-features = false, features = ["serialize"] }
proptest = { workspace = true, optional = true }
proptest-arbitrary-interop = { workspace = true, optional = true }
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }
serde_bytes = { version = "0.11.19", default-features = false, features = ["alloc"] }
serde_ipld_dagcbor = { workspace = true, default-features = false }
sha2 = { version = "0.10.9", default-features = false }
signature = { workspace = true, default-features = false }
thiserror = { workspace = true, default-features = false }
tracing = { workspace = true, default-features = false, features = ["attributes"] }
varsig = { path = "../varsig", default-features = false, features = ["dag_cbor", "ed25519"] }

[dev-dependencies]
arbitrary = { workspace = true, optional = false }
base64 = "0.22.1"
ipld-core = { version = "0.4.2", features = ["arb", "std"] }
pretty_assertions.workspace = true
proptest = { workspace = true, optional = false }
proptest-arbitrary-interop = "0.1.0"
serde_json = "1.0"
serde_ipld_dagjson.workspace = true
test-log.workspace = true
testresult.workspace = true

[features]
default = ["std"]
std = [
    "getrandom",
    "bs58/std",
    "ed25519-dalek/std",
    "ipld-core/std",
    "nom/std",
    "serde/std",
    "serde_bytes/std",
    "serde_ipld_dagcbor/std",
    "sha2/std",
    "signature/std",
    "thiserror/std",
    "tracing/std",
    "varsig/std",
]
getrandom = ["dep:getrandom"]
wasm = ["dep:js-sys", "dep:wasm-bindgen"]
test_utils = ["arb", "property_test"]
arb = ["dep:arbitrary", "ipld-core/arb"]
property_test = ["dep:proptest", "dep:proptest-arbitrary-interop"]

[lints]
workspace = true
