[package]
name = "ucan_wasm"
readme = "README.md"
authors = ["Brooklyn Zelenka <hello@brooklynzelenka.com>"]
keywords = ["auth", "capability", "rpc"]
categories = ["security", "web-programming", "wasm"]
description = "WebAssembly wrapper for ucan"
version = "0.1.0"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ucan = { path = "../ucan" }
wasm-bindgen = "=0.2.114"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["js"] }

[lints]
workspace = true
